# rust-users-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  otel-config.yaml
sql/: init.sql
src/: logger.rs  main.rs
src/context/: mod.rs
src/controllers/: user_controller.rs
src/db/: mod.rs
src/errors/: api_error.rs  app_error.rs  mod.rs  responder.rs
src/middlewares/: cors.rs
src/models/: user.rs
src/repository/: user_repository.rs
src/routes/: cors_options.rs  mod.rs  user_routes.rs
src/services/: user_service.rs
src/trace/: mod.rs  tracing_setup.rs
