[package]
name = "user-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_mysql"] }

sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }

mysql_async = "0.32"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-opentelemetry = "0.21"

# OpenTelemetry + Jaeger
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
opentelemetry-otlp = { version = "0.13", features = ["http-proto", "reqwest-client"] }
reqwest = { version = "0.12", features = ["blocking"] }